# Steganography

./: .gitignore  CMakeLists.txt  README.md
4-SkeletonCode/: decode.c  decode.h  encode.c  encode.h  logs.h  main.c
src/: common.h  decode.c  decode.h  encode.c  encode.h  logs.h  main.c  types.h
